feat: add endpoint to retrieve all console sessions
